Add universal website support and deep video scanning
Extension now supports all websites, including those with embedded players (IFrames) and Shadow DOM. Improved video detection algorithm recursively scans for video elements in complex page structures. Updated version to 2.2.4 in manifest and documentation.

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "manifest_version": 3,
   "name": "Anime4K Web Upscaler",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "description": "Real-time video upscaling with Anime4K, FSR, and more",
   "content_scripts": [
     {
       "matches": [
         "<all_urls>"
       ],
+      "all_frames": true,
       "js": [
         "Model/debug.js",
         "Model/anime4k_fast.js",
