--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Anime4K Web Upscaler",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "Real-time video upscaling with Anime4K, FSR, and more",
   "content_scripts": [
     {
@@ -27,6 +27,20 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage"
-  ]
+    "storage",
+    "declarativeNetRequest",
+    "declarativeNetRequestWithHostAccess"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "ruleset_1",
+        "enabled": true,
+        "path": "net_request_rules.json"
+      }
+    ]
+  }
 }
