--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Anime4K Web Upscaler",
-  "version": "2.6.6",
+  "version": "2.8.1",
   "description": "Real-time video upscaling with Anime4K, FSR, and more",
   "content_scripts": [
     {
@@ -17,7 +17,9 @@
         "Model/xbrz.js",
         "Model/cas.js",
         "Model/bicubic.js",
+        "Model/lanczos3.js",
         "Model/realsr.js",
+        "Model/esrgan.js",
         "content.js"
       ],
       "run_at": "document_idle"
@@ -33,6 +35,12 @@
   ],
   "host_permissions": [
     "<all_urls>"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["worker.js"],
+      "matches": ["<all_urls>"]
+    }
   ],
   "declarative_net_request": {
     "rule_resources": [
