--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Anime4K Web Upscaler",
-  "version": "2.8.1",
-  "description": "Real-time video upscaling with Anime4K, FSR, and more",
+  "version": "2.8.3",
+  "description": "Real-time video upscaling with Anime4K, FSR, and more. Refactored modular codebase.",
   "content_scripts": [
     {
       "matches": [
@@ -10,6 +10,12 @@
       ],
       "all_frames": true,
       "js": [
+        "src/config.js",
+        "src/utils/webgl-utils.js",
+        "src/utils/dom-utils.js",
+        "src/utils/shader-utils.js",
+        "src/utils/resolution-utils.js",
+        "src/core/video-processor.js",
         "Model/debug.js",
         "Model/anime4k_fast.js",
         "Model/anime4k_hq.js",
@@ -20,7 +26,7 @@
         "Model/lanczos3.js",
         "Model/realsr.js",
         "Model/esrgan.js",
-        "content.js"
+        "src/content-main.js"
       ],
       "run_at": "document_idle"
     }
@@ -38,8 +44,12 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["worker.js"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "src/worker-main.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ],
   "declarative_net_request": {
