--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "anime4k-web-upscaler",
+    "name": "nextclarity",
     "version": "2.8.1",
-    "description": "Real-time video upscaling with Anime4K, FSR, and more",
+    "description": "Real-time video upscaling with advanced AI shaders including Anime4K, FSR, and more",
     "main": "src/index.js",
     "scripts": {
         "build": "node build.js",
